fix: blog detail truncated & add reading progress bar & update table of content style

--- a/styles/global.css
+++ b/styles/global.css
@@ -210,9 +210,6 @@ body {
     font-size: 90%;
 }
 
-.notion-aside-table-of-contents .notion-table-of-contents-item {
-    font-size: 80% !important;
-}
 
 .notion-collection-row-value {
     font-size: 1rem !important;
